Fix ExcessDeaths disclaimer spacing

--- a/src/style/visualizations/main.sass
+++ b/src/style/visualizations/main.sass
@@ -9,9 +9,6 @@ $box-shadow: 0 6px 38px -18px rgba(0, 0, 0, 0.3), 0 11px 12px -12px rgba(0, 0, 0
   @media only screen and (min-width: 850px)
     @content
 
-.hidden
-  display: none
-
 .invisible
   visibility: hidden
   pointer-events: none
